--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,7 @@ tiktoken==0.7.0
 typing_extensions==4.12.1
 urllib3==2.2.1
 uvicorn==0.30.1
+sqlalchemy==2.0.43
+databases[postgresql]==0.9.0
+alembic==1.16.5
+aiosqlite==0.21.0
