chore: Remove comprehensive documentation from repository
- Remove COMPREHENSIVE_PROJECT_EXPLANATION.md from tracking
- Add to .gitignore to keep documentation local only
- Documentation remains available locally for personal use

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,6 @@ logs/
 # API keys and secrets
 secrets.json
 config.json
+
+# Documentation files (keep local only)
+COMPREHENSIVE_PROJECT_EXPLANATION.md
